refactor: unmodifiable -> copyOf 로 변경